fix: fixed container breaking in dark mode, set dark default

--- a/src/stories/forms/QuestionForm/QuestionForm.css
+++ b/src/stories/forms/QuestionForm/QuestionForm.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 10px 0px;
 }
 
 .success-message {
