--- a/src/stories/headers/Title/Title.css
+++ b/src/stories/headers/Title/Title.css
@@ -1,7 +1,7 @@
 .title {
   font-weight: 900;
   line-height: 1;
-  margin: 6px 0 6px 10px;
+  margin: 40px 0px;
   display: inline-block;
   vertical-align: top;
   padding: 5px;
